// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseDescription component renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiCard-root card MuiPaper-elevation1 MuiPaper-rounded"
    data-testid="courseDescription"
  >
    <div
      class="MuiCardContent-root"
    >
      <h4
        class="MuiTypography-root Typography-root-1 Typography-underline-3 MuiTypography-h4"
        data-testid="typography"
      >
        Basic competency programme (BCP)
      </h4>
      <div
        class="header"
      >
        <div>
          <div
            class="metadata"
          >
            <div
              class="type"
            >
              type.Pitched roof
            </div>
            <p
              class="MuiTypography-root tech Typography-root-1 MuiTypography-body1"
              data-testid="typography"
            >
              <svg
                class="technologyIcon"
                viewBox="0 0 48 44.488"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h48v44.488H0z"
                  fill="none"
                />
                <path
                  d="M24 3 1 20.961l2.53 3.4 3.743-2.929v20.056h33.454V21.431l3.743 2.908L47 20.961Z"
                  fill="currentColor"
                />
              </svg>
              technology.PITCHED
            </p>
            <div
              class="status"
            >
              <p
                class="MuiTypography-root Typography-root-1 MuiTypography-body1"
                data-testid="typography"
              >
                undefined
              </p>
            </div>
          </div>
          <div
            class="cta"
          >
            <button
              class="MuiButtonBase-root MuiButton-root Button-root-9 MuiButton-outlined MuiButton-outlinedPrimary"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
              type="button"
            >
              <span
                class="MuiButton-label Button-label-12"
              >
                <span
                  class="MuiButton-startIcon Button-startIcon-13 MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                viewTraining
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="body"
      >
        <p>
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem architecto placeat inventore nostrum voluptates deserunt possimus laborum autem eum? Cum temporibus debitis delectus veniam, deleniti sequi nobis ipsa explicabo voluptate!
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`CourseDescription component should not show technology button if technology not exist 1`] = `
<div>
  <div
    class="MuiPaper-root MuiCard-root card MuiPaper-elevation1 MuiPaper-rounded"
    data-testid="courseDescription"
  >
    <div
      class="MuiCardContent-root"
    >
      <h4
        class="MuiTypography-root Typography-root-29 Typography-underline-31 MuiTypography-h4"
        data-testid="typography"
      >
        Basic competency programme (BCP)
      </h4>
      <div
        class="header"
      >
        <div>
          <div
            class="metadata"
          >
            <div
              class="type"
            >
              type.Pitched roof
            </div>
            <div
              class="status"
            >
              <p
                class="MuiTypography-root Typography-root-29 MuiTypography-body1"
                data-testid="typography"
              >
                undefined
              </p>
            </div>
          </div>
          <div
            class="cta"
          >
            <button
              class="MuiButtonBase-root MuiButton-root Button-root-37 MuiButton-outlined MuiButton-outlinedPrimary"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
              type="button"
            >
              <span
                class="MuiButton-label Button-label-40"
              >
                <span
                  class="MuiButton-startIcon Button-startIcon-41 MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                viewTraining
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="body"
      >
        <p>
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem architecto placeat inventore nostrum voluptates deserunt possimus laborum autem eum? Cum temporibus debitis delectus veniam, deleniti sequi nobis ipsa explicabo voluptate!
        </p>
      </div>
    </div>
  </div>
</div>
`;
